# dex-data-indexer-substream

./: Cargo.toml  Makefile  README.md  substreams.yaml  trades.jsonl
proto/: output.proto
src/: lib.rs  trade_instruction.rs  utils.rs
src/dapps/: meteora_damm_v1.rs  meteora_damm_v2.rs  meteora_dlmm.rs  meteora_dynamic_bonding_curve.rs  mod.rs  orca_swap_v2.rs  pumpfun.rs  pumpswap.rs  raydium_amm.rs  raydium_cpmm.rs
src/pb/: .last_generated_hash  mod.rs
